Log4j library added, logs added to Services and some changes in Controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,22 @@
+# SERVER
+server.port=8080
 server.error.include-message=always
 
+# DATASOURCE
 spring.jpa.hibernate.ddl-auto=create
-
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/pokeapidb
 spring.datasource.username=postgres
 spring.datasource.password=test1234
 
+# JPA
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=false
+
+# LOGGING
+logging.level.=ERROR
+log4j.appender.Stdout.threshold=info
+
+# SPRING
+spring.output.ansi.enabled=ALWAYS
