Sprite entity changed to Artwork

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 server.error.include-message=always
 
 # DATASOURCE
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/pokeapidb
