--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 server.error.include-message=always
 
 # DATASOURCE
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/pokeapidb
@@ -11,7 +11,7 @@ spring.datasource.username=postgres
 spring.datasource.password=test1234
 
 # JPA
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 # LOGGING
 logging.level.=ERROR
