Swagger dependency added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ log4j.appender.Stdout.threshold=info
 
 # SPRING
 spring.output.ansi.enabled=ALWAYS
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
