--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.0'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'com.h2database:h2:2.1.212'
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 tasks.named('test') {
