--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.0'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'org.modelmapper:modelmapper:3.1.0'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'com.h2database:h2:2.1.212'
     compileOnly 'org.projectlombok:lombok:1.18.12'
